[package]
name = "amdp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
dotenv = "0.15.0"

[dependencies]
anyhow = "1.0.89"
discord-presence = { version = "1.3.0", features = ["activity_type"] }
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
urlencoding = "2.1.3"
